--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,22 +12,123 @@
   </head>
   <body>
     <nav class="nav">
-      <a class="nav-link active" href="#">/a>
+      <a class="nav-link active" href="#">Mongo Scraper</a>
       <a class="nav-link" href="/">Home</a>
       <a class="nav-link" href="/saved">Saved Articles</a>
-      <a class="nav-link disabled" href="/scrape">Scrape for More Articles</a>
+      <a class="nav-link" href="#" id="scrape">Scrape for More Articles</a>
     </nav>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <h1 class="display-4">News Scraper!</h1>
-        <p class="lead">Articles Generously Made Public By New York Times</p>
+        <p class="lead">Articles Generously Made Public By Market Watch</p>
       </div>
     </div>
     {{{body}}}
+     <div class="modal fade" id="commentModal" tabindex="-1" role="dialog" aria-labelledby="commentModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="commentModalLabel">Add a Comment</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <label for="cmmtTitle" class="col-form-label">Title:</label>
+                <input type="text" class="form-control" id="cmmtTitle">
+              </div>
+              <div class="form-group">
+                <label for="cmmtBody" class="col-form-label">Comment:</label>
+                <textarea class="form-control" id="cmmtBody"></textarea>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary submit">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script>
+    $(document).ready(function(){
+      $(document).on("click", "#scrape", function(event){
+        $.ajax({
+          url: "/scrape",
+          method: "POST"
+        }).then(result=>{
+          alert(result);
+        }).catch(err=>{
+          console.log(err);
+        });
+      });
+     $(document).on("click", ".savebtn", function(event){
+          event.preventDefault();
+
+          const id = event.target.id;
+
+          $.ajax({
+               url: `/articles/${id}`,
+               method: `PUT`
+          }).then(result=>{
+               alert(`Article has been saved!`);
+          }).catch(err=>{
+               console.log(err);
+          });
+     });
+
+     $(document).on("click", ".rmvbtn", function(event){
+          event.preventDefault();
+
+          const id = event.target.id;
+
+          $.ajax({
+               url: `/articles/${id}`,
+               method: `DELETE`
+          }).then(result=>{
+               alert(`Article has been removed from the Saved List.`);
+          }).catch(err=>{
+               console.log(err);
+          });
+     });
+
+     $(document).on("click", ".submit", function(event){
+          event.preventDefault();
+
+          let comment = {
+               articleId: $(event.target).data("article"),
+               title: $("#cmmtTitle").val().trim(),
+               text: $("#cmmtBody").val().trim()
+          }
+          console.log(comment);
+          $.ajax({
+               url: `/comments/${comment.articleId}`,
+               method: `POST`,
+               data: comment
+          }).then(result=>{
+               alert(`Comment has been saved to Article.`);
+               $("#cmmtTitle").val("");
+               $("#cmmtBody").val("");
+               $('.submit').attr("data-article", "");
+          }).catch(err=>{
+               console.log(err);
+          });
+     });
+     $(document).on("show.bs.modal", "#commentModal", function(event){
+      var button = $(event.relatedTarget);
+      let article = button.data('article');
+      var modal = $(this);
+      modal.find('.submit').attr("data-article", article);
+})
+})
+  </script>
   </body>
 </html>
